
For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

 - Columns aren't implicitly cast to a type anymore. Whenever columns are
   compared to Literals (e.g. 'string', 1, 1.2), these literals will be
   converted to the column type but not vice-versa. The column can still be
   manually cast to a type by using a cast function.

Changes
=======

- Added support to manually control the allocation of shards using
  ``ALTER TABLE REROUTE``.
  Supported reroute-options: MOVE, ALLOCATE REPLICA, CANCEL

- Added new system table ``sys.allocations`` which lists shards and their
  allocation state including the reasoning why they are in a certain state.

- Upgraded Elasticsearch to v5.6.3

- Added new table setting ``allocation.max_retries`` that defines the number of
  attempts to allocate a shard before giving up and leaving it unallocated.

- Function arguments are now linked to each other, where possible. This enables
  type inference between arguments such that arguments can be converted to match
  a function's signature. For example, ``coalesce(integer, long)`` would have
  resulted in an "unknown function" message. We now convert this call into
  ``coalesce(long, long)``. The conversion is possible through a type precedence
  list and convertibility checks on the data types.

- Functions which accept regular expression flags now throw an error when
  invalid flags are provided.

- Added the ``pg_backend_pid()`` function for enhanced PostgreSQL compatibility.

- Added support for the PSQL ParameterDescription message which allows to get
  the parameter types in prepared statements up front without specifying the
  actual arguments first. This fixes compatibility issues with some drivers.
  Only works for Select statements at the moment.

Fixes
=====