@@ -57,6 +57,7 @@ import org.elasticsearch.transport.BindTransportException;
 
 import java.io.IOException;
 import java.net.Inet4Address;
+import java.net.Inet6Address;
 import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.util.ArrayList;
@@ -181,7 +182,7 @@ public class PostgresNetty extends AbstractLifecycleComponent {
         try {
             InetAddress[] hostAddresses = networkService.resolveBindHostAddresses(null);
             for (InetAddress address : hostAddresses) {
-                if (address instanceof Inet4Address) {
+                if (address instanceof Inet4Address || address instanceof Inet6Address) {
                     boundAddresses.add(bindAddress(address));
                 }
             }
